Code formatting and remove any unused fields